syntax = "proto3";

package authentication;

service Authentication {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetProfile(ProfileRequest) returns (ProfileResponse);
  rpc UpdateProfile(ProfileUpdateRequest) returns (ProfileUpdateResponse);
}



enum Status {
  Ok = 0;
  Bad = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string message = 2;
}

message ProfileRequest { string token = 1; }

message ProfileResponse {
  string email = 1;
  string last_name = 2;
  string full_name = 3;
  repeated string roles = 4;
}

message ProfileUpdateRequest {
  string token = 1;
  string email = 2;
  string full_name = 3;
}

message ProfileUpdateResponse {
  string message = 1;
  bool success = 2;
}

message SignUpRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

message SignUpResponse {
  string message = 1;
  Status status = 2;
}